--- a/react-debugging.html
+++ b/react-debugging.html
@@ -56,6 +56,7 @@
               <Card
                 drawCard={ this.drawCard }
                 shuffle={ this.shuffle }
+                hand={this.state.hand}
               />
             </>
           )
@@ -80,13 +81,13 @@
           }
           return(
             <>
-              <button onClick={ }>
+              <button onClick={this.props.drawCard }>
                 Click to Draw a Card
               </button>
-              <button onClick={ shuffle }>
+              <button onClick={ this.props.shuffle }>
                 Return Cards and Shuffle Deck
               </button>
-              <div style={ handStyles }>
+              <div style={ {handStyles} }>
                 { this.props.hand.map((card, index) => {
                   return (
                     <div style={ cardStyles } key={ index }>
